[tool.poetry]
name = "ngl_tools"
version = "1.0.1"
description = "A collection of software tools developed by the Next Generation Liquefaction modeling teams"
authors = [
    "Scott J. Brandenberg", 
    "Kenneth L. Hudson", 
    "Kristin J. Ulmer", 
    "Paolo Zimmaro"
]
license = "LICENSE.txt"
readme = "README.md"

packages = [
    {include = "ngl_tools", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.22"

[build-system]
requires = ["poetry-core","numpy"]
build-backend = "poetry.core.masonry.api"
